# ingenialink-python

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  INGK-1251_INVESTIGATION.md  Jenkinsfile  LICENSE  LICENSE.md  Manifest.in  Pipfile  README.rst  agents.md  appveyor.yml  build_lib.sh  eve-net_canopen_1.4.2.eds  mypy.ini  poetry.toml  pyproject.toml  pysoem_  pytest.ini  rack_specifiers.json  reproduce_ci_path.py  reproduce_stale_sdo.py  requirements.txt  ruff.toml  setup.cfg  setup.py  summit_testing_framework-0.1.1-py3-none-any.whl  summit_testing_framework-0.1.2-py3-none-any.whl  test_lib.sh  tox.ini
.github/: CODEOWNERS  pull_request_template.md
_docs/: .buildinfo  api.html  changelog.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_docs/.doctrees/: api.doctree  changelog.doctree  environment.pickle  examples.doctree  index.doctree
_docs/_modules/: index.html
_docs/_sources/: api.rst.txt  examples.rst.txt
_docs/_static/: documentation_options.js
_docs/api/: base_classes.html  exceptions.html  protocols.html
_docs/examples/: communication.html  load_firmware.html  load_save_configuration.html
docs/: api.rst  building.rst  conf.py  examples.rst  index.rst  requirements.txt
docs/api/: base_classes.rst  dictionary.rst  exceptions.rst  helpers.rst  monitor.rst  net.rst  poller.rst  protocols.rst  register.rst  regs.rst  servo.rst
docs/architecture/: network.md  servo.md
docs/examples/: communication.rst  load_firmware.rst  load_save_configuration.rst
docs/jenkins/: parameters.md
examples/: requirements.txt
examples/canopen/: can_connection.py  can_connection_linux.py  can_disturbance.py  can_load_firmware.py  can_load_firmware_exmaple.py  can_load_save_config.py  can_monitoring.py  can_store_restore.py  can_store_restore_example.py  canopen_connection_example.py  canopen_example.py  canopen_store_restore_example.py  load_config.py  load_firmware_exmaple.py
examples/ethercat/: ecat_connection.py  ecat_disturbance.py  ecat_load_firmware.py  ecat_load_save_config.py  ecat_monitoring.py  ecat_store_restore.py  process_data_objects.py
examples/ethernet/: eth_connection.py  eth_load_firmware.py  eth_load_save_config.py  eth_monitoring.py  eth_store_restore.py
examples/general/: canopen_example.py  cap-net_ecat_J.F.0.lfu  dictionary.py  ecat_load_firmware.py  ecat_slave_connection.py  eth_connection.py  eth_example.py  eth_monitor.py  eth_store_restore.py  load_config.py  load_firmware.py  load_save.py  load_save_config.py  monitoring.py  read_write_floats.py  save_config.py  scan_drives.py  slave_connection.py  summit.xml  xcore.xml
examples/jupyter/: Introduction to IngeniaLink.ipynb  dict_demo.xml
examples/monitor/: monitor.py
examples/motion/: basic_motion.py  eve-xcr_1.5.2.xdf
examples/scope/: scope.py
examples/serial/: serial_connection.py  serial_scan_drives.py
examples/watcher/: watcher.py
ingenialink/: __init__.py  _utils.py  bitfield.py  configuration_file.py  const.py  constants.py  csv_configuration_file.py  dict_.py  dict_labels.py  dictionary.py  dictionary_deprecated.py  drive_context_manager.py  emcy.py  err.py  exceptions.py  ingenialink_build.py  ipb_network.py  ipb_servo.py  monitor.py  multi_drive_example records.json  multi_drive_example.json  net.py  network.py  pdo.py  pdo_network_manager.py  poller.py  register.py  register_can_eth.py  register_deprecated.py  registers.py  regs.py  servo.py  table.py
ingenialink/canopen/: __init__.py  can_dictionary.py  can_net.py  can_poller.py  can_register.py  can_servo.py  constants.py  dictionary.py  net.py  network.py  netwrok.py  poller.py  poller_node.py  register.py  registers.py  servo.py  servo_node.py
ingenialink/cython_files/: CyGetAdaptersAddresses.pxd  GetAdaptersAddresses.pxd  __init__.py  get_adapters_addresses.pyx  retrieve_adapters.py  setup.py
ingenialink/enums/: ethercat.py  register.py  servo.py
ingenialink/eoe/: network.py
ingenialink/ethercat/: dictionary.py  ecat_net.py  ecat_servo.py  network.py  pdo.py  register.py  servo.py
ingenialink/ethernet/: dictionary.py  eth_net.py  eth_servo.py  network.py  register.py  servo.py
ingenialink/ftp_test/: ftp_client.py  ftp_server.py  test_server_thread.py
ingenialink/ipb/: dictionary.py  network.py  poller.py  register.py  registers.py  servo.py
ingenialink/mcb/: mcb_net.py  network.py
ingenialink/serial/: network.py  servo.py
ingenialink/utils/: GetAdaptersAddresses.pxd  _utils.py  constants.py  errors.py  event.py  get_adapters_addresses.pyx  mcb.py  observer.py  retrieve_adapters.py  timeout.py  udp.py
ingenialink/virtual/: base_network.py  codec.py  dictionary.py  network.py  servo.py  virtual_drive.py
requirements/: dev-requirements.txt  requirements.txt
resources/configurations/: can_config.xcf  canopen-config.xcf  ethernet-config.xcf  eve-net-c_1.8.1_canopen.xcf  eve-xcr-e_1.8.1_cfg.xcf  serial-config.xcf
resources/dictionaries/: cap-net-e_eoe_0.7.1.xdf  eve-core_1.8.1.xdf  eve-net-c_1.8.1.eds  eve-xcr-c_1.8.1.eds  eve-xcr-c_can_1.8.1.xdf  eve-xcr-c_eth_1.8.1.xdf  eve-xcr-e_eoe_1.8.1.xdf
resources/firmware/: cap-net-e_0.7.1.lfu
tests/: config.json  conftest.py  dashboard_template.html  generate_quality_stages.py  load_FWs.py  power.py  test.py  test_bitfields.py  test_can_connection.py  test_can_load_firmware.py  test_can_load_save_config.py  test_can_store_restore.py  test_canopen_connection.py  test_configuration_file.py  test_csv_configuration_file.py  test_dictionary.py  test_drive_context_manager.py  test_emcy.py  test_eth_connection.py  test_eth_network.py  test_eth_servo.py  test_eth_store_restore.py  test_examples.py  test_exceptions.py  test_get_adapters_addresses.py  test_imports.py  test_mcb.py  test_register.py  test_servo.py  test_table.py  test_utils.py  test_virtual_drive.py  virtual_drive.py
tests/canopen/: test_can_network.py  test_can_servo.py  test_canopen_dictionary.py  test_canopen_examples.py  (+6 more)
virtual_drive/: __init__.py  constants.py  core.py  environment.py  gpios.py  signals.py
(+233 files in other folders)
